--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,6 +13,7 @@
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.9.0",
+    "react-chatbot-kit": "^1.1.20",
     "react-dom": "^17.0.2",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
