--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-chartjs-2": "^2.9.0",
     "react-chatbot-kit": "^1.1.20",
     "react-dom": "^17.0.2",
